Finished writing SDR Software methodology

--- a/eecs-thesis-template-main/common/references/references.bib
+++ b/eecs-thesis-template-main/common/references/references.bib
@@ -439,6 +439,22 @@
   note = {Accessed: 2024-09-10}
 }
 
+@misc{librtlsdr,
+  author       = {Steve M.},
+  title        = {librtlsdr},
+  year         = {2024},
+  url          = {https://github.com/steve-m/librtlsdr?tab=readme-ov-file},
+  note         = {Accessed: 2024-09-17},
+}
+
+@misc{soapsdr,
+  author       = {Pothosware},
+  title        = {SoapySDR},
+  year         = {2024},
+  url          = {https://github.com/pothosware/SoapySDR/wiki},
+  note         = {Accessed: 2024-09-17},
+}
+
 
 
 
